# image_upload_actix

./: Cargo.toml  README.md
src/: main.rs  routes.rs
upload/: aa0b7055-34d6-411a-8363-5a91af03c5f2-screen2.png.avif  be159d3a-84bc-499e-87dd-c1b0a9a6cfd3-screen1.png.avif
