[package]
name = "properties"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
futures = "0.3.29"
chrono = { version = "0.4.22", features = ["serde"] }
listenfd = "1.0.1"
sqlx = {version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono", "uuid", "bigdecimal"] }
dotenv = "0.15.0"
mime = "0.3.17"
actix-multipart = "0.6.1"
rayon = "1.8.0"
sanitize-filename = "0.5.0"
tempfile = "3.8.1"
futures-util = "0.3.29"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
tokio = "1.34.0"
image = { version = "0.24.7", features = ["avif"] }




[profile.release-lto]
inherits = "release"
lto = true
opt-level = 3


[features]
build-bindings = []
# cargo run --profile release-lto